--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | QR code component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -26,18 +26,25 @@
     </style>
   </head>
   <body>
-    <article>
-      <img src="/images/image-qr-code.png" alt="" height="300">
-      <h1>Improve your front-end skills by building projects </h1>
-      <p>Scan the QR code to visit
-        Frontend Mentor and take your coding skills to the next level</p>
-      </article>
-        
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+    <div class="container">
     </div>
+    <container class="main">
+      <article>
+        <img src="/images/image-qr-code.png" alt="" height="300" width="300" />
+        
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </article>
+    </container>
+
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
   </body>
 </html>
